# ollama-experiments

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-20-ollama-harness.md
docs/superpowers/specs/: 2026-05-20-ollama-harness-design.md
harness/: __main__.py  agent.py  config.py  ollama_client.py  registry.py  ui_repl.py  ui_streamlit.py
harness/tools/: __init__.py  _sandbox.py  filesystem.py  shell.py  web.py
tests/: test_agent_events.py  test_config.py  test_e2e.py  test_ollama_client.py  test_registry.py  test_sandbox.py  test_tools_filesystem.py  test_tools_shell.py
