[project]
name = "ollama-experiments"
version = "0.1.0"
description = "Local LLM harness with tool-calling, REPL + Streamlit UIs"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "ddgs>=6.0.0",
    "rich>=13.0.0",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
